tests/error_corpus/validation_errors/E513_empty_participant_role.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI
@ID:	eng|corpus|CHI|||||Child|||
@Comment:	ERROR: Participant must have role
*CHI:	hello .
@End
